<resources>
    <string name="app_name">KarobarCompany</string>
    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_thin">sans-serif-thin</string>


    //APP INTRO
    <string name="title1">Receive order on your phone</string>
    <string name="description1">Get your order without visiting every other distributor. Just wait for the order to be placed by the distributor and you are good to go</string>

    <string name="title2">Manage your workers</string>
    <string name="description2">With one click you can add and authorize any worker within the company who will be responsible for managing the delivery process of orders</string>


    <string name="title3">Showcase your products</string>
    <string name="description3">Make a gallery of the products you will be delivering so the distributors can see what products you are actually supplying</string>
    <string name="karobar_title">Karobar</string>
    <string name="login_email_address">Email address</string>
    <string name="login_password">Password</string>
    <string name="app_title">Karobar</string>
    <string name="login_remember_password">Remember password</string>
    <string name="login_registerBtn_text">Register</string>
    <string name="register_contact">Contact</string>
    <string name="register_name">Name</string>
    <string name="register_company_name">Company name</string>
    <string name="dummy_address">Lahore, Pakistan</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_product_list">Product list</string>
    <string name="menu_order_list">Order list</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="dummy_company_name">Coke Industries</string>
    <string name="header_active_orders">Active Orders</string>
    <string name="dummy_pending_order_value_35">35</string>
    <string name="header_pending_orders">Pending Orders</string>
    <string name="dummy_location">176 2B-2 Johar Town Lahore</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_supervisor_list">Supervisor list</string>
    <string name="menu_delivery_man_list">Delivery man list</string>
    <string name="menu_add_supervisor">Add supervisor</string>
    <string name="menu_add_delivery_man">Add delivery man</string>
    <string name="route_btn_view_order">View Order</string>
    <string name="view_route_btn">View Route</string>
    <string name="dummy_retailer_name">Fork n Knives</string>
    <string name="orderList_assign_order">Assign Order</string>
    <string name="dummy_product_name">Coca Cola Mint</string>
    <string name="dummy_price">250/-</string>
    <string name="product_list_price_label">Price</string>
    <string name="dummy_quantity">250 ml</string>
    <string name="dummy_quantity_label">Quantity</string>
    <string name="add_product_dialog">ADD PRODUCT</string>
    <string name="product_name_dialog">Product name</string>
    <string name="product_price_dialog">Price Per Carton</string>
    <string name="product_quantity_dialog">Product Quantity</string>
    <string name="product_description_dialog">Product Description</string>
    <string name="add_btn_dialog">Add</string>
    <string name="productList_productDetail_btn">Product Detail</string>
    <string name="productList_editProduct_btn">Edit Product</string>
    <string name="dialog_product_detail">Product Detail</string>
    <string name="dialog_hint_price_per_container">Price Per Carton</string>
    <string name="dialog_edit_product_title">Edit Product</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toast_message">Message</string>
</resources>
