<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/grp1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_menu_product_list"
            android:icon="@drawable/ic_reorder_black_24dp"
            android:title="@string/menu_product_list" />
        <item
            android:id="@+id/nav_menu_order_list"
            android:icon="@drawable/ic_reorder_black_24dp"
            android:title="@string/menu_order_list" />


        <item
            android:id="@+id/nav_menu_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings"
            android:visible="true" />
    </group>

    <item
        android:id="@+id/nav_menu_logout"
        android:icon="@drawable/ic_remove_circle_black_24dp"
        android:title="@string/menu_logout" />


</menu>
