<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    app:ignore="NamespaceTypo">

    <RelativeLayout
        android:id="@+id/orderList_rootLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/custom_shadow_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:orientation="vertical"
            app:ignore="RtlSymmetry">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/orderList_shopName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@string/font_family_condensed"
                    android:text="@string/dummy_retailer_name"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/horizontal_line_route"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@+id/orderList_shopName"
                    android:layout_centerInParent="true"
                    android:background="@color/colorSeparator" />

                <TextView
                    android:id="@+id/orderList_location"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/horizontal_line_route"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@string/font_family_light"
                    android:text="@string/dummy_location"
                    android:textSize="13sp" />

                <Button
                    android:id="@+id/orderList_assignBtn"
                    android:layout_width="90dp"
                    android:layout_height="27dp"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/custom_assign_btn_bg"
                    android:fontFamily="@string/font_family_regular"
                    android:text="@string/orderList_assign_order"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/orderList_viewOrderBtn"
                    android:layout_width="90dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/custom_order_button"
                    android:fontFamily="@string/font_family_regular"
                    android:text="@string/route_btn_view_order"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="13sp" />

                <Button
                    android:id="@+id/orderList_viewRouteBtn"
                    android:layout_width="90dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/custom_order_button"
                    android:fontFamily="@string/font_family_regular"
                    android:text="@string/view_route_btn"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="13sp" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>

