<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_shadow_background">


    <RelativeLayout
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:id="@+id/productList_topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:id="@+id/productList_innerLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/productList_itemQuantity"
                android:layout_width="90dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/custom_assign_btn_bg"
                android:gravity="center"
                android:fontFamily="@string/font_family_regular"
                android:text="@string/dummy_quantity"
                android:textColor="@color/colorWhite"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@string/font_family_condensed"
                android:layout_marginStart="10dp"
                android:text="@string/dummy_product_name"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="10dp"
                android:layout_below="@id/item_name"
                android:background="@color/colorSeparator" />

            <TextView
                android:id="@+id/item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_subcategory_name"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/item_amount"
                android:text="@string/dummy_price"
                android:fontFamily="@string/font_family_light"
                android:textColor="@color/secondary_text_dark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_subcategory_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_name"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="Township Lahore Pakistan"
                android:textColor="@color/secondary_text_dark"
                android:textSize="14sp"
                android:textStyle="normal"
                android:visibility="gone" />

            <TextView
                android:id="@+id/item_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_subcategory_name"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/product_list_price_label"
                android:textColor="@color/secondary_text_dark"
                android:fontFamily="@string/font_family_light"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_quantity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_amount"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/dummy_quantity_label"
                android:textColor="@color/secondary_text_dark"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="gone" />
        </RelativeLayout>


        <ImageView
            android:visibility="gone"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/dummy_product" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:layout_centerInParent="true"
            android:layout_below="@+id/productList_innerLayout"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/productList_productDetailBtn"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/custom_order_button"
                android:fontFamily="@string/font_family_regular"
                android:text="@string/productList_productDetail_btn"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="13sp" />

            <Button
                android:id="@+id/productList_productEditBtn"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/custom_order_button"
                android:fontFamily="@string/font_family_regular"
                android:text="@string/productList_editProduct_btn"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="13sp" />

        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>

