<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="13dp"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/add_product_dialog"
                android:textSize="@dimen/text_xLarge"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_margin="5dp"
                android:src="@drawable/ic_cancel_black_24dp"
                android:tint="@color/colorPrimary" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorSeparator" />

        <LinearLayout
            android:id="@+id/addProduct_imagesLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            android:visibility="visible">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout style="@style/add_product_linearLayout">

                <EditText
                    android:id="@+id/productDialog_prodName"
                    style="@style/add_product_editText"
                    android:hint="@string/product_name_dialog"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout style="@style/add_product_linearLayout">

                <EditText
                    android:id="@+id/productDialog_prodPrice"
                    style="@style/add_product_editText"
                    android:hint="@string/product_price_dialog"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout style="@style/add_product_linearLayout">

                <EditText
                    android:id="@+id/productDialog_prodQuantity"
                    style="@style/add_product_editText"
                    android:hint="@string/product_quantity_dialog"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout style="@style/add_product_linearLayout">

                <EditText
                    android:id="@+id/productDialog_prodDescription"
                    style="@style/add_product_editText"
                    android:hint="@string/product_description_dialog"
                    android:maxLines="3" />
            </LinearLayout>
        </LinearLayout>


        <ImageView
            android:id="@+id/productDialog_addProdImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_add_image_bg"
            android:src="@drawable/ic_add_black_24dp"
            android:tint="@color/colorPrimary" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_spinner_bg"
            android:visibility="visible">

            <Spinner
                android:id="@+id/productDialog_categorySpinner"
                android:layout_width="250dp"
                android:layout_height="35dp"
                android:popupBackground="@color/colorPrimary"
                android:spinnerMode="dropdown" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_spinner_bg"
            android:visibility="visible">

            <Spinner
                android:id="@+id/productDialog_SubCategorySpinner"
                android:layout_width="250dp"
                android:layout_height="35dp"
                android:popupBackground="@color/colorPrimary"
                android:spinnerMode="dropdown" />
        </RelativeLayout>

        <Button
            android:id="@+id/productDialog_addBtn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/custom_order_button"
            android:text="@string/add_btn_dialog"
            android:textColor="@color/colorWhite" />

    </LinearLayout>
</ScrollView>