<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/nav_header_custom_drawable"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--<de.hdodenhof.circleimageview.CircleImageView-->
            <!--android:layout_width="@dimen/avatar_size"-->
            <!--android:layout_height="@dimen/avatar_size"-->
            <!--android:layout_gravity="center"-->
            <!--android:layout_margin="10dp"-->
            <!--android:background="@drawable/diagonallayout_circle"-->
            <!--android:elevation="17dp"-->
            <!--android:src="@drawable/diagonallayout_hughjackman" />-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/dummy_name_muhammad_mehroz_afzal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorWhite" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_location_on_black_24dp"
            android:gravity="center"
            android:text="@string/dummy_address"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/secondary_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/navDrawer_pendingOrders"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:fontFamily="@string/font_family_regular"
                    android:gravity="center|bottom"
                    android:text="@string/dummy_pending_order_value_35"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_medium"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:fontFamily="@string/font_family_regular"
                    android:gravity="center"
                    android:text="@string/header_pending_orders"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_small" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/navDrawer_pendingRequests"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:fontFamily="@string/font_family_regular"
                    android:gravity="center|bottom"
                    android:text="@string/dummy_pending_order_value_35"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_medium"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:fontFamily="@string/font_family_regular"
                    android:gravity="center"
                    android:text="@string/header_active_orders"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_small" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
