<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:padding="13dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fourthSampleStrokeWidth"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/dialog_product_detail"
                android:textSize="@dimen/text_xLarge"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_margin="5dp"
                android:src="@drawable/ic_cancel_black_24dp"
                android:tint="@color/colorPrimary" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorSeparator" />

        <LinearLayout
            android:id="@+id/addProduct_imagesLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            android:visibility="visible">

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout style="@style/product_detail_linearLayout">

                    <TextView
                        android:id="@+id/productDialog_prodName"
                        style="@style/product_detail_textView"
                        android:hint="@string/product_name_dialog"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout style="@style/product_detail_linearLayout">

                    <TextView
                        android:id="@+id/productDialog_prodPrice"
                        style="@style/product_detail_textView"
                        android:hint="@string/dialog_hint_price_per_container"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout style="@style/product_detail_linearLayout">

                    <TextView
                        android:id="@+id/productDialog_prodQuantity"
                        style="@style/product_detail_textView"
                        android:hint="@string/product_quantity_dialog"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout style="@style/product_detail_linearLayout">

                    <TextView
                        android:id="@+id/productDialog_prodDescription"
                        style="@style/product_detail_textView"
                        android:hint="@string/product_description_dialog"
                        android:maxLines="5" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/productDetailDialog_prodImage1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_add_image_bg"
                android:src="@drawable/ic_add_black_24dp"
                android:tint="@color/colorPrimary" />

            <ImageView
                android:id="@+id/productDetailDialog_prodImage2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_add_image_bg"
                android:src="@drawable/ic_add_black_24dp"
                android:tint="@color/colorPrimary" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>