<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_gradient_background">

    <LinearLayout
        android:id="@+id/registerActivity_logoHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@null"
            android:src="@drawable/karobar_logo" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/registerActivity_input_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerActivity_logoHeader"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <LinearLayout style="@style/loginActivity_horizontal_linearLayout">

            <ImageView
                style="@style/loginActivity_imageView"
                android:src="@drawable/ic_person_outline_black_24dp" />

            <EditText
                style="@style/loginActivity_editText"
                android:hint="@string/login_email_address"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout style="@style/loginActivity_horizontal_linearLayout">

            <ImageView
                style="@style/loginActivity_imageView"
                android:src="@drawable/ic_lock_outline_black_24dp" />

            <EditText
                style="@style/loginActivity_editText"
                android:hint="@string/login_password"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout style="@style/loginActivity_horizontal_linearLayout">

            <ImageView
                style="@style/loginActivity_imageView"
                android:src="@drawable/ic_phone_black_24dp" />

            <EditText
                style="@style/loginActivity_editText"
                android:hint="@string/register_contact"
                android:inputType="phone" />
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/registerActivity_input_layout"
        android:backgroundTint="@color/colorPrimaryDark"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_navigate_next_white"
        app:fabSize="normal"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>